--- a/apps/monitoring/alertmanager-ingress.yaml
+++ b/apps/monitoring/alertmanager-ingress.yaml
@@ -23,3 +23,29 @@ spec:
               number: 9093
         path: /
         pathType: Prefix
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: alertmanager-allow-from-ingress
+  namespace: monitoring
+spec:
+  ingress:
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: haproxy-ingress
+    - podSelector:
+        matchLabels:
+          app.kubernetes.io/name: haproxy-ingress-private
+    ports:
+    - port: 9093
+      protocol: TCP
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/component: alert-router
+      app.kubernetes.io/instance: main
+      app.kubernetes.io/name: alertmanager
+      app.kubernetes.io/part-of: kube-prometheus
+  policyTypes:
+  - Ingress
