--- a/apps/monitoring/grafana-ingress.yaml
+++ b/apps/monitoring/grafana-ingress.yaml
@@ -23,3 +23,28 @@ spec:
               number: 3000
         path: /
         pathType: Prefix
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: grafana-allow-from-ingress
+  namespace: monitoring
+spec:
+  ingress:
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: haproxy-ingress
+    - podSelector:
+        matchLabels:
+          app.kubernetes.io/name: haproxy-ingress-private
+    ports:
+    - port: 3000
+      protocol: TCP
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/component: grafana
+      app.kubernetes.io/name: grafana
+      app.kubernetes.io/part-of: kube-prometheus
+  policyTypes:
+  - Ingress
